# denaria-perp-arbitrum

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  Stylus.toml  example.env  foundry.toml  nitro-addresses.json  remappings.txt  rust-toolchain.toml  whitepaper.tex
.cargo/: audit.toml  config.toml
.github/workflows/: test.yml
abis/: CallBatcher.json  CurveMath.json  ERC20.json  LostAndFound.json  Oracle.json  PerpEngine.candidate.abi.sol  PerpEngine.json  README.md  StylusPerpMultiCalls.json  UtilMath.json  Vault.json  addresses.json
assertions/: Assertion Invariants.md
assertions/src/: IPerpPair.sol  assertionBadDebt.a.sol
assertions/test/: assertionBadDebt.t.sol  assertionBadDebtBacktesting.t.sol
docs/: ARCHITECTURE.md  CARGO_STYLUS_0_10_8_EVALUATION.md  DEPLOYMENT.md  GAS_BENCHMARKS.md  TESTING.md  VERIFICATION.md  WASM_SIZE_OPTIMIZATION.md
docs/assets/: gen_denaria_stylus_architecture.py
perp-engine/: Cargo.toml  Stylus.toml
perp-engine/src/: access_control.rs  auto_close.rs  close.rs  config.rs  funding.rs  internal_logic.rs  lib.rs  liquidation.rs  liquidity.rs  main.rs  tests.rs  trade.rs
script/: ArbitrumSepoliaProdDeploy.s.sol  LocalNitroDeploy.s.sol  activation_monitor.sh  build_deploy_artifact.sh  cache_keeper.sh  candidate_abi.sh  coverage.sh  deploy-local-nitro.sh  drive-trade-local.sh  generate_verify_tree.sh  nitro_e2e.sh  post_deploy_read_smoke.sh  selector_dependency_audit.py  selector_manifest.py  test-curve-math-parity.sh  wasm_diagnostics.sh
src/: LostAndFound.sol  PerpPair.sol  Vault.sol  main.rs
src/CL_oracle_middleware/: TWAPOracleMiddleware.sol
src/CL_oracle_middleware/interfaces/: IFeeManager.sol  IOracleMiddleware.sol  IVerifierProxy.sol
src/interfaces/: ICurveMathAdapter.sol  ILostAndFound.sol  IMultiCallManager.sol  IPerpPair.sol  IVault.sol
src/manager/: FeeManager.sol  StylusPerpMultiCalls.sol  callBatcher.sol  multiCallManager.sol
src/perpModules/: internalPerpLogic.sol  perpAutoClose.sol  perpConfig.sol  perpFunding.sol  perpLiquidation.sol  perpLiquidity.sol  perpTrade.sol
src/rust/: CurveMath.rs  curve_math_parity.inc
src/storage/: PerpStorage.sol
src/test_support/: CurveMathSolidityHarness.sol  TWAPOracleMiddlewareTest.sol  TestPriceProvider.sol
src/token/: USDCe.sol
src/util/: CurveMath.sol  MatrixMath.sol  UtilMath.sol
test/: EpochIntegration.t.sol  FuzzTesting.t.sol  InvariantTesting.t.sol  LpBalanceClampFuzz.t.sol  MultiCallTest.t.sol  Oracle.t.sol  OracleMiddlewareReport.t.sol  PerpPair.t.sol  PerpPair2.t.sol  Vault.t.sol  batcherTest.sol
test/abi_gen/: PerpEngineAbi.sol
test/bench/: DemoScenarioGasBench.t.sol
test/c0_envelope/: C0EnvelopeSweep.t.sol
test/config/: EventSelectorGoldenVector.t.sol  ParamHashGoldenVector.t.sol
test/curve_math/: CurveMathGoldenVector.t.sol
test/differential/: ClosePnlDifferential.t.sol  LiquidationDifferential.t.sol  LiquidityDifferential.t.sol  TradeFundingDifferential.t.sol  VaultLegacy.sol  VaultSeamDifferential.t.sol
test/fixtures/: close_pnl_differential.json  curve_math_solidity_vectors.json  event_selector_vectors.json  funding_solidity_vectors.json  liquidation_differential.json  liquidity_differential.json  param_hash_vectors.json  trade_funding_differential.json
test/funding/: FundingGoldenVector.t.sol
test/helpers/: PerpPairTestDeploymentHelper.sol
test/parity/: StylusEngineSurfaceMock.sol  StylusReadSurface.t.sol
